<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.unhify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.unhify.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.unhify.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_promos"
        android:name="com.example.unhify.ui.promos.PromosFragment"
        android:label="@string/menu_promos"
        tools:layout="@layout/fragment_promos" />
    <fragment
        android:id="@+id/nav_recompensas"
        android:name="com.example.unhify.ui.recompensas.RecompensasFragment"
        android:label="@string/menu_recompensas"
        tools:layout="@layout/fragment_recompensas" />
    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.example.unhify.ui.calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.example.unhify.ui.ayuda.AyudaFragment"
        android:label="@string/menu_ayuda"
        tools:layout="@layout/fragment_ayuda" />
</navigation>