<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true">

        <ImageView
            android:adjustViewBounds="true"
            android:layout_alignBottom="@id/sportsImage"
            android:id="@+id/sportsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@string/img1">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sportsImage"
            android:id="@+id/titlel"
            android:text="@string/tit1"
            android:padding="8dp"
            android:textSize="30dp"
            android:visibility="visible"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newsTitle"
            android:layout_below="@id/sportsImage"
            android:textColor="?android:textColorSecondary"
            android:text="@string/news_placeholder"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitle"
            android:id="@+id/subTitle"
            android:text="@string/desc1"
            android:padding="8dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_centerHorizontal="true"
            android:id="@+id/id_bagenda"
            android:text="Agendar cita"
            android:background="@color/gris"
            android:padding="8dp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
