<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.unhify.bienvenida">

        <ImageView
            android:id="@+id/photoImageViewb"
            android:src="@mipmap/ic_logo_inicio"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/nameTextViewb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/emailTextViewb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/idTextViewb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="14sp" />

</LinearLayout>